force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>DN-Sales Order</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>