force-app/main/default/objects/Sales_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the link field to the Account custom object/table.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>