force-app/main/default/objects/Sales_Order__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>