force-app/main/default/objects/Sales_Order__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>