force-app/main/default/objects/Sales_Order__c/fields/BV_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>BV_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BV Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>