force-app/main/default/objects/Sales_Order__c/fields/BV_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>BV_Last_Modified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BV Last Modified Date</label>
    <type>Date</type>
</CustomField>