force-app/main/default/objects/Sales_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will use the Contact custom object for the lookup.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>