force-app/main/default/objects/Sales_Order__c/fields/MC_Conversion_Code__c.field-meta.xml
<CustomField>
    <fullName>MC_Conversion_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MC Conversion Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>