force-app/main/default/objects/Sales_Order__c/fields/ORDE_txtOrderBy__c.field-meta.xml
<CustomField>
    <fullName>ORDE_txtOrderBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Placed By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>