force-app/main/default/objects/Sales_Order__c/fields/Packing_Slip_Printed__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packing Slip Printed</label>
    <type>Checkbox</type>
</CustomField>