force-app/main/default/objects/Sales_Order__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>