force-app/main/default/objects/Sales_Order__c/fields/Price_Disc_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Disc_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Price Disc Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>