force-app/main/default/objects/Sales_Order__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>