force-app/main/default/objects/Sales_Order__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <description>Required Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Required Date</label>
    <type>Date</type>
</CustomField>