force-app/main/default/objects/Sales_Order__c/fields/Sales_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Tax 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>