force-app/main/default/objects/Sales_Order__c/fields/Salesperson_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesperson ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>