force-app/main/default/objects/Sales_Order__c/fields/Ship_Labels_Printed__c.field-meta.xml
<CustomField>
    <fullName>Ship_Labels_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship Labels Printed</label>
    <type>Checkbox</type>
</CustomField>