force-app/main/default/objects/Sales_Order__c/fields/Ship_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship To ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>