force-app/main/default/objects/Sales_Order__c/fields/Sync_ID_Org__c.field-meta.xml
<CustomField>
    <fullName>Sync_ID_Org__c</fullName>
    <description>BUSINESSVISION Organization ID. Used when uploading multiple BV companies. Sync ID is also prefixed with this code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync ID Org</label>
    <length>2</length>
    <type>Text</type>
</CustomField>