force-app/main/default/objects/Sales_Order__c/recordTypes/DN_US_Sales_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Sales_Order_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Sales Order Record Type</label>
</RecordType>