force-app/main/default/objects/Sales_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>BV_ID__c</columns>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>