force-app/main/default/objects/Sales_Order__c/listViews/This_Month_Order.listView-meta.xml
<ListView>
    <fullName>This_Month_Order</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Ship_Via__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month&apos;s Orders</label>
</ListView>