force-app/main/default/objects/Sales_Order__c/listViews/Today_Order.listView-meta.xml
<ListView>
    <fullName>Today_Order</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Ship_Via__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesperson_Name__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Orders</label>
</ListView>